cluster/base/bento/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bento
  namespace: bento
  labels:
    app: bento
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bento
  template:
    metadata:
      labels:
        app: bento
    spec:
      containers:
      - name: bento
        image: bentopdfteam/bentopdf-simple:2.8.7
        ports:
        - containerPort: 8080
          name: http
