cluster/base/bento/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bento
  namespace: bento
spec:
  type: ClusterIP
  selector:
    app: bento
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
